<resources>
    <string name="app_name">Cheap Trains</string>
    <string name="set_time">SET TIME</string>
    <string name="date_not_set">Date has not been set</string>
    <string name="set_date">SET DATE</string>
    <string name="submit">SUBMIT</string>
    <string name="time_not_set">Time has not been set</string>
    <string name="sort_list">SORT LIST</string>
    <string name="start_station">Start Station</string>
    <string name="end_station">End Station</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="railcard">Railcard</string>
    <string name="network_failure">Network failure</string>
    <string name="redo_button">redo button</string>
    <string name="date_button">date button</string>
    <string name="end_date">End date:</string>
    <string name="set_end_date">Set end date</string>
    <string name="start_date">Start date:</string>
    <string name="midnight">00:00</string>
    <string name="journey_start">Journey start:</string>
    <string name="nearly_midnight">23:59</string>
    <string name="submit_button">Submit button</string>
    <string name="fetching_results">Fetching results...</string>
</resources>
