<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evan.cheaptrains.MainActivity">

    <ImageButton
        android:id="@+id/time_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:onClick="showTimePickerDialog"
        app:layout_constraintLeft_toLeftOf="@id/relativeLayout"
        app:layout_constraintTop_toTopOf="@id/relativeLayout"
        android:src="@drawable/clock"
        android:contentDescription="time button" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/time_not_set"
        app:layout_constraintBottom_toBottomOf="@id/time_button"
        app:layout_constraintRight_toRightOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@id/time_button" />

    <ImageButton
        android:id="@+id/date_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/set_date"
        app:layout_constraintLeft_toRightOf="@id/tomorrow"
        app:layout_constraintTop_toTopOf="@id/today"
        app:layout_constraintBottom_toBottomOf="@id/today"
        android:src="@drawable/calendar"
        android:contentDescription="@string/date_button" />
    <!--android:onClick="showDatePickerDialog"/>-->

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/date_not_set"
        app:layout_constraintBottom_toBottomOf="@+id/date_button"
        app:layout_constraintRight_toRightOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@id/date_button" />

    <View
        android:id="@+id/divider"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/start_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_station"
        android:paddingTop="10dp"
        android:inputType="text"
        android:maxEms="15"
        android:maxLines="1"
        android:minEms="15"
        app:layout_constraintLeft_toLeftOf="@id/time_button"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:text="Oxford"/>

    <AutoCompleteTextView
        android:id="@+id/end_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/end_station"
        android:inputType="text"
        android:maxEms="15"
        android:maxLines="1"
        android:minEms="15"
        app:layout_constraintLeft_toLeftOf="@id/start_station"
        app:layout_constraintTop_toBottomOf="@id/start_station"
        android:text="London"/>

    <!--<Button-->
        <!--android:id="@+id/today"-->
        <!--android:layout_width="110dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/today"-->
        <!--android:layout_margin="20dp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/end_station"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toLeftOf="@id/tomorrow"-->
        <!--android:onClick="setDateToday"-->
        <!--/>-->

    <ImageButton
        android:id="@+id/today"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/time_button"
        app:layout_constraintLeft_toLeftOf="@id/time_button"
        app:layout_constraintRight_toLeftOf="@id/tomorrow"
        android:onClick="setDateToday"
        android:contentDescription="@string/today"
        android:src="@drawable/calendar_blank"/>

    <TextView
        android:id="@+id/today_text"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingTop="2dp"
        app:layout_constraintLeft_toLeftOf="@id/today"
        app:layout_constraintTop_toTopOf="@id/today"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="#000"
        android:letterSpacing="-0.1"
        />

<!--    <Button
        android:id="@+id/tomorrow"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/end_station"
        app:layout_constraintLeft_toRightOf="@id/today"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="setDateTomorrow"
        />    -->

    <ImageButton
        android:id="@+id/tomorrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/today"
        app:layout_constraintBottom_toBottomOf="@id/today"
        app:layout_constraintLeft_toRightOf="@id/today"
        android:onClick="setDateTomorrow"
        android:contentDescription="@string/tomorrow"
        android:src="@drawable/plus_one"
        />

<!--
    <ImageButton
        android:id="@+id/set_end_date"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/end_station"
        app:layout_constraintLeft_toRightOf="@id/tomorrow"
        android:contentDescription="@string/set_end_date"
        android:src="@drawable/calendar"
        />
-->

    <Button
        android:id="@+id/submit_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="@id/relativeLayout"
        app:layout_constraintRight_toRightOf="@id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@id/end_station"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <CheckBox
        android:id="@+id/railcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/railcard"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="@id/time_button"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        />


</android.support.constraint.ConstraintLayout>